language/move-lang/tests/move_check/translated_ir_tests/commands/continue_outside_loop_in_if.move
script {
fun main() {
    if (true) continue;
}
}

// check: continue outside loop
